--- a/STM32_REG/07_UART/Debug/makefile
+++ b/STM32_REG/07_UART/Debug/makefile
@@ -60,8 +60,8 @@ all: main-build
 main-build: stm_drivers.elf secondary-outputs
 
 # Tool invocations
-stm_drivers.elf stm_drivers.map: $(OBJS) $(USER_OBJS) C:\Users\USER\STM32CubeIDE\workspace_1.19.0\stm_drivers\STM32L476RGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "stm_drivers.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\USER\STM32CubeIDE\workspace_1.19.0\stm_drivers\STM32L476RGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="stm_drivers.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+stm_drivers.elf stm_drivers.map: $(OBJS) $(USER_OBJS) E:\Micro\ controller\GIThub\STM32\STM32_REG\07_UART\STM32L476RGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "stm_drivers.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"E:\Micro controller\GIThub\STM32\STM32_REG\07_UART\STM32L476RGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="stm_drivers.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
