add i2c interrupt file

--- a/STM32_REG/10_I2C_Interrupt/.project
+++ b/STM32_REG/10_I2C_Interrupt/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>i2c_interrupt</name>
+	<name>i2c_interrupt_2</name>
 	<comment></comment>
 	<projects>
 	</projects>
