--- a/STM32_REG/05_SPI_STM_ESP/Debug/makefile
+++ b/STM32_REG/05_SPI_STM_ESP/Debug/makefile
@@ -60,8 +60,8 @@ all: main-build
 main-build: 05_Esp32_SPI.elf secondary-outputs
 
 # Tool invocations
-05_Esp32_SPI.elf 05_Esp32_SPI.map: $(OBJS) $(USER_OBJS) C:\Users\USER\STM32CubeIDE\workspace_1.19.0\05_Esp32_SPI\STM32L476RGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "05_Esp32_SPI.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\USER\STM32CubeIDE\workspace_1.19.0\05_Esp32_SPI\STM32L476RGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="05_Esp32_SPI.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+05_Esp32_SPI.elf 05_Esp32_SPI.map: $(OBJS) $(USER_OBJS) E:\Micro\ controller\GIThub\STM32\STM32_REG\05_SPI_STM_ESP\STM32L476RGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "05_Esp32_SPI.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"E:\Micro controller\GIThub\STM32\STM32_REG\05_SPI_STM_ESP\STM32L476RGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="05_Esp32_SPI.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
