--- a/STM32_REG/10_I2C_Interrupt/Debug/makefile
+++ b/STM32_REG/10_I2C_Interrupt/Debug/makefile
@@ -34,34 +34,34 @@ $(wildcard ../makefile.init) \
 $(wildcard ../makefile.targets) \
 
 
-BUILD_ARTIFACT_NAME := i2c_interrupt
+BUILD_ARTIFACT_NAME := i2c_interrupt_2
 BUILD_ARTIFACT_EXTENSION := elf
 BUILD_ARTIFACT_PREFIX :=
 BUILD_ARTIFACT := $(BUILD_ARTIFACT_PREFIX)$(BUILD_ARTIFACT_NAME)$(if $(BUILD_ARTIFACT_EXTENSION),.$(BUILD_ARTIFACT_EXTENSION),)
 
 # Add inputs and outputs from these tool invocations to the build variables 
 EXECUTABLES += \
-i2c_interrupt.elf \
+i2c_interrupt_2.elf \
 
 MAP_FILES += \
-i2c_interrupt.map \
+i2c_interrupt_2.map \
 
 SIZE_OUTPUT += \
 default.size.stdout \
 
 OBJDUMP_LIST += \
-i2c_interrupt.list \
+i2c_interrupt_2.list \
 
 
 # All Target
 all: main-build
 
 # Main-build Target
-main-build: i2c_interrupt.elf secondary-outputs
+main-build: i2c_interrupt_2.elf secondary-outputs
 
 # Tool invocations
-i2c_interrupt.elf i2c_interrupt.map: $(OBJS) $(USER_OBJS) C:\Users\USER\STM32CubeIDE\workspace_1.19.0\i2c_interrupt\STM32L476RGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "i2c_interrupt.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\USER\STM32CubeIDE\workspace_1.19.0\i2c_interrupt\STM32L476RGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="i2c_interrupt.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+i2c_interrupt_2.elf i2c_interrupt_2.map: $(OBJS) $(USER_OBJS) C:\Users\USER\STM32CubeIDE\workspace_1.19.0\i2c_interrupt_2\STM32L476RGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "i2c_interrupt_2.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\USER\STM32CubeIDE\workspace_1.19.0\i2c_interrupt_2\STM32L476RGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="i2c_interrupt_2.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -70,14 +70,14 @@ default.size.stdout: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	@echo 'Finished building: $@'
 	@echo ' '
 
-i2c_interrupt.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "i2c_interrupt.list"
+i2c_interrupt_2.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "i2c_interrupt_2.list"
 	@echo 'Finished building: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) default.size.stdout i2c_interrupt.elf i2c_interrupt.list i2c_interrupt.map
+	-$(RM) default.size.stdout i2c_interrupt_2.elf i2c_interrupt_2.list i2c_interrupt_2.map
 	-@echo ' '
 
 secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST)
