--- a/STM32_REG/14_Timer/03_Timer_input_compare/.project
+++ b/STM32_REG/14_Timer/03_Timer_input_compare/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Timer_input_compare</name>
+	<name>Timer_output_compare</name>
 	<comment></comment>
 	<projects>
 	</projects>
